--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,79 @@
 .App-link {
   color: #09d3ac;
 }
+.map-div{
+  margin: 20px;
+  margin-right: 20px;
+  width: 60%;
+  height: 50%;
+}
+
+.app-container{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+#user-container{
+    width: 40%;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: top;
+}
+
+#user-container form {
+    border: 1px solid #466b75;
+    background: rgba(70, 107, 117,.5);
+    padding: 3rem 1rem;
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+#user-container button:hover{
+    background: #466b75;
+    background: rgba(70, 107, 117,.9);
+}
+
+#user-container button{
+    background: #466b75;
+    text-align: center;
+    width: 130px;
+    height: 30px;
+    overflow: hidden;
+    border-radius: 5px;
+    
+}
+#user-container input{
+    width: 125px;
+    height: 30px;
+    overflow: hidden;
+    border-radius: 5px;
+}
+@media all and (min-width: 480px) {
+  .Login {
+    padding: 60px 0;
+  }
+
+  .Login form {
+    margin: 0 auto;
+    max-width: 320px;
+  }
+}
+.favorit-content-div{
+  padding-top: 15px;
+  background:rgba(70, 107, 117,.5);
+  color: whitesmoke;
+  height: 440px;
+  width: 280px;
+  border: 1px solid #466b75;
+  overflow: auto;
+  border-radius: 10px;
+}
+.favorit-content-div li{
+ padding-top: 10px;
+}
