--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,14 @@
   height: 50%;
 }
 
+.pic{
+  width: 50px;
+   height: 50px;
+}
+.pic img{
+  width: 40px;
+   height: 30px;
+}
 .app-container{
   width: 100%;
   display: flex;
@@ -38,21 +46,21 @@
     height: 100vh;
     position: relative;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: top;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
     
 }
 
 #user-container form {
     border: 1px solid #466b75;
     background: rgba(70, 107, 117,.5);
-    padding: 3rem 1rem;
+    padding: 2rem 2rem;
     width: 100%;
     text-align: center;
     overflow: hidden;
     border-radius: 5px;
-       align-content: space-between;
+    align-content: space-between;
 }
 
 #user-container button:hover{
@@ -73,10 +81,28 @@
     border-radius: 5px;
     font-size: calc(5px + 2vmin);
     margin: 5px;
+    color: white;
     
 }
 #user-container input{
-    width: 170px;
+    /* width: 170px; */
+    height: 20px;
+    overflow: hidden;
+    border-radius: 5px;
+    padding: 8px;
+    margin-bottom: 3px;
+    /* padding-left: 6px;
+     margin-left: 10px; */
+}
+
+#user-container label{
+    
+    justify-content: right;
+  
+
+}
+#user-container select{
+   width: 170px;
     height: 30px;
     overflow: hidden;
     border-radius: 5px;
@@ -93,7 +119,7 @@
     max-width: 320px;
   }
 }
-.favorit-content-div{
+.favorit-content-div, .ui.form{
   padding-top: 15px;
   background:rgba(70, 107, 117,.5);
   color: whitesmoke;
@@ -105,4 +131,14 @@
 }
 .favorit-content-div li{
  padding-top: 10px;
+}
+form.ui.form {
+  padding-bottom: 0 !important;
+}
+
+.ui.form  .field{
+  width: 100%;
+}
+.ui.form .field input{
+  width: 80%;
 }
