--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@
     border: 1px solid #466b75;
     background: rgba(70, 107, 117,.5);
     padding: 2rem 2rem;
-    width: 100%;
+    /* width: 100%; */
     text-align: center;
     overflow: hidden;
     border-radius: 5px;
@@ -137,7 +137,7 @@ form.ui.form {
 }
 
 .ui.form  .field{
-  width: 100%;
+  width: 80%;
 }
 .ui.form .field input{
   width: 80%;
